@@ -58,6 +58,9 @@ plugin.tx_srfeuserregister_pi1 {
     # cat=plugin.tx_srfeuserregister_pi1//; type=int+; label= Registration page PID: PID of the page on which the plugin is inserted with the intent of serving as the front end user registration page.
   registerPID =
 
+    # cat=plugin.tx_srfeuserregister_pi1//; type=string; label= User groups records PID list: List of page id's on which user groups records may be located.
+  userGroupsPidList =
+
     # cat=plugin.tx_srfeuserregister_pi1//; type=int+; label= Profile editing page PID: PID of the page on which the plugin is inserted with the intent of serving as the front user profile editing page.
   editPID =
 
